# gradys-sim-nextgen

./: .gitignore  404.html  CMakeLists.txt  Diagrama Gradys-SIM v2.drawio  LICENSE.txt  README.md  index.html  main.cpp  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  ruff.toml  setup.py  simulation.py
.github/workflows/: pages.yaml  publish.yaml  tests.yaml
Getting Started/execution/: index.html
Getting Started/setup/: index.html
Guides/1_creating/: index.html
Guides/2_simple/: index.html
Guides/3_extending/: index.html
Guides/3_raft_consensus/: index.html
Guides/4_mobility/: index.html
Guides/Prototype Mode/: index.html
Guides/Python Simulator/: index.html
Guides/camera example/: main.py  protocol.py
Guides/creating/: index.html
Guides/radio example/: radio_protocol.py
Guides/simple/: index.html
Guides/simple example/: main.py  simple_protocol.py
Modules/Encapsulator/: index.html
Modules/Protocol/: index.html
Modules/Simulator/: index.html
docs/: counter_execution.py  counter_protocol.py  execution.md  framework.md  index.md  reference.md
docs/Getting Started/: execution.md  setup.md  usage.md
docs/Guides/: 1_creating.md  2_simple.md  3_extending.md  4_mobility.md  creating.md  simple.md
docs/assets/: Framework diagram.drawio
docs/guide/: execution.md  usage.md
docs/modules/: simulation.md
encapsulator/: __init__.py  interface.py  interop.py  python.py
encapsulator/provider/: interop.py  python.py  simple.py
framework/: index.html
gradys/encapsulator/: __init__.py  interface.py  interop.py  python.py
gradys/protocol/: __init__.py  interface.py
gradys/simulator/: event.py  log.py  node.py  simulation.py
gradysim/encapsulator/: __init__.py  interface.py  interop.py  python.py
gradysim/protocol/: __init__.py  interface.py  position.py
gradysim/simulator/: __init__.py  event.py  log.py  node.py  simulation.py
helper/: code_generator.py  generate_simulation.py  ini_template.jinja  ini_template_cartesian.jinja  ini_template_euclidean.jinja  main.py  python_template.jinja  visualization.ipynb
protocol/: __init__.py  interface.py  provider.py
protocol/addons/: random_mobility.py
protocol/messages/: communication.py  mobility.py
protocol/simple/: protocol_ground.py  protocol_mobile.py  protocol_sensor.py
search/: search_index.json
showcases/dynamic-velocity-mobility/: main.py  protocol.py
showcases/follow-mobility/: main.py  protocol.py
showcases/inertial-mobility/: main.py  protocol.py
showcases/ping-pong/: PingPongProtocol.py  PingProtocol.py  main.py  main_stepped.py  ping.py
showcases/raft/: main.py  protocol.py
showcases/simple/: main.py  protocol_ground.py  protocol_mobile.py  protocol_sensor.py
showcases/zigzag/: main.py  message.py  mission.txt  protocol_mobile.py  protocol_sensor.py  utils.py
simulation_results/express/: simulation_real_time_cpp_express_ZigZagProtocolMobile_7.csv  simulation_real_time_cpp_express_ZigZagProtocolMobile_8.csv  simulation_real_time_cpp_express_ZigZagProtocolMobile_9.csv  simulation_real_time_cpp_express_ZigZagProtocolSensor_10.csv  simulation_real_time_cpp_express_ZigZagProtocolSensor_11.csv  simulation_real_time_cpp_express_ZigZagProtocolSensor_12.csv  simulation_real_time_python_express_ZigZagProtocolMobile_1.csv  simulation_real_time_python_express_ZigZagProtocolMobile_2.csv  simulation_real_time_python_express_ZigZagProtocolMobile_3.csv  (+13 more)
simulator/: event.py  log.py  node.py  position.py  simulation.py
simulator/event/: loop.py
site/: 404.html  index.html
tests/: test_assertion_handler.py  test_camera.py  test_communication.py  test_communication_controller.py  test_communication_handler.py  test_dispatcher_addon.py  test_eventloop.py  test_follow_mobility.py  test_mission_mobility_addon.py  test_mobility.py  test_mobility_handler.py  test_radio_plugin.py  test_showcases.py  test_simulation_builder.py  test_timer_handler.py  test_visualization.py
(+303 files in other folders)
