[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gradys*"]

[project]
name = "gradysim"
version = "0.7.3"
description = "GrADyS-SIM NextGen is a framework for implementing distributed algorithms in a simulated network environment"
keywords = ["network", "distributed", "algorithm", "simulation", "gradys", "LAC", "PUC", "drone", "sensor"]
authors = [
    { name = "Thiago de Souza Lamenza", email = "thlamenza@hotmail.com" },
    { name = "Josef Maria Kamysek", email = "josef@kamysek.com" }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    'websockets>=12'
]

[project.urls]
"Homepage" = "https://github.com/Project-GrADyS/gradys-sim-nextgen"
"Documentation" = 'https://project-gradys.github.io/gradys-sim-nextgen/'